# rknn_video_quality_classification

./: README.md
freeze_detect/: CMakeLists.txt
freeze_detect/src/: main_normal_det.cc  normal_det.cc  normal_det.h
include/: AbnormalAnalysis.h
src/: AbnormalAnalysis.cc  CMakeLists.txt  main.cc  resnet.h  rk_cls_utils.h  video_quality_label.txt
src/build_exec/: AbnormalAnalysis  CMakeCache.txt  Makefile  cmake_install.cmake
src/build_exec/3rdparty.out/: Makefile  cmake_install.cmake
src/build_exec/normal_det.out/: Makefile  cmake_install.cmake
src/build_exec/utils.out/: Makefile  cmake_install.cmake
src/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
src/build_release/3rdparty.out/: Makefile  cmake_install.cmake
src/build_release/normal_det.out/: Makefile  cmake_install.cmake
src/build_release/utils.out/: Makefile  cmake_install.cmake
src/rknpu2/: resnet.cc
utils/: CMakeLists.txt
